quorum/test/tests/TypeChecker/Pass/ImpAssignBooleanBooleanWrapped.quorum
class main
    action main
        boolean bool = false
    end
end