quorum/test/tests/TypeChecker/Fail/ImpAssignBoolObjNumberWrapped.quorum
class main
    action main
        Boolean b = 7.5
    end
end